--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.6",
+    "nuka-carousel": "^4.5.13",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "styled-components": "^4.4.1",
     "uuid": "^3.2.1"
